--- a/Chat Bot.ipynb
+++ b/Chat Bot.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ec694aff",
+   "id": "89e72ea3",
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bef717f1",
+   "id": "7667e036",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8ba89510",
+   "id": "9dd69f08",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "717c2fb6",
+   "id": "ae99c8e5",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fff17746",
+   "id": "f2c384b4",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e6ae3355",
+   "id": "0b3dd933",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a0f3008f",
+   "id": "856b4177",
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "301fef74",
+   "id": "40fa1925",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "24168db5",
+   "id": "b40d9192",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7302a4d0",
+   "id": "1302bed2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "729ab717",
+   "id": "61110f5b",
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a03067e7",
+   "id": "98d90328",
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5ece39bd",
+   "id": "89f1e365",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f93c9c6a",
+   "id": "4ec2f00d",
    "metadata": {},
    "outputs": [
     {
@@ -462,13 +462,7 @@
       "10/10 [==============================] - 0s 3ms/step - loss: 0.0806 - accuracy: 0.9787\n",
       "Epoch 82/200\n",
       "10/10 [==============================] - 0s 3ms/step - loss: 0.0460 - accuracy: 1.0000\n",
-      "Epoch 83/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 83/200\n",
       "10/10 [==============================] - 0s 2ms/step - loss: 0.0360 - accuracy: 1.0000\n",
       "Epoch 84/200\n",
       "10/10 [==============================] - 0s 3ms/step - loss: 0.1032 - accuracy: 0.9787\n",
@@ -724,8 +718,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "26cc6855",
+   "execution_count": 44,
+   "id": "e6d26568",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,8 +731,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "5b65042d",
+   "execution_count": 45,
+   "id": "4d541382",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,8 +743,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "b9cf325c",
+   "execution_count": 46,
+   "id": "78e0c6d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,8 +757,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "f6e11272",
+   "execution_count": 47,
+   "id": "b922d100",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -796,8 +790,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "21490234",
+   "execution_count": 48,
+   "id": "5f12314a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,8 +807,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "26e7ef10",
+   "execution_count": 49,
+   "id": "700a0d3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,15 +820,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "540a940c",
+   "execution_count": 50,
+   "id": "8a940227",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 170ms/step\n"
+      "1/1 [==============================] - 0s 99ms/step\n"
      ]
     },
     {
@@ -843,7 +837,7 @@
        "'Hi there, how can I help?'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,8 +848,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "ec763031",
+   "execution_count": 51,
+   "id": "f6283555",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,17 +858,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "a222a638",
+   "execution_count": null,
+   "id": "e2bf1a06",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "1/1 [==============================] - 0s 20ms/step\n"
+      "1/1 [==============================] - 0s 16ms/step\n"
      ]
     }
    ],
@@ -896,7 +888,7 @@
     "        ChatLog.yview(END)\n",
     "       \n",
     "base=Tk()\n",
-    "base.title('HELLO')\n",
+    "base.title('Talk with me')\n",
     "base.geometry(\"400x500\")\n",
     "base.resizable(width=FALSE,height=False)\n",
     "ChatLog = Text(base, bd=0, bg=\"white\", height=\"8\", width=\"50\", font=\"Arial\",)\n",
@@ -915,7 +907,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25120fd4",
+   "id": "f2775ffa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce6ba652",
    "metadata": {},
    "outputs": [],
    "source": []
